Use overflow-anchor as a better fix for scrolling behaviour
Our hack for this caused issues when programatically setting the offset with a smooth scroll. This is the corect fix!

--- a/web/styles.css
+++ b/web/styles.css
@@ -112,6 +112,10 @@ span.label.gc {
     background-color: #424242;
 }
 
+.table-virtual {
+    overflow-anchor: none;
+}
+
 .table-virtual td {
     max-width: 500px; /* required for text-overflow to work? */
     overflow: hidden;
